# adventofcode

./: .gitignore  README.md
2021/01/: Makefile  ssweep.c
2021/02/: Makefile  dive.c
2021/03/: binarydiagnostic.c
2021/04/: giantsquid.c
2021/05/: Makefile  htventure.c
2021/06/: Makefile  lanternfish.c
2021/07/: ttowhales.c
2021/08/: Makefile  sesesearch.c
2021/09/: Makefile  smokebasin.c
2021/1/: Makefile  scan  scan.c  ssweep  ssweep.c
2021/10/: Makefile  synscoring.c
2021/11/: Makefile  doctopus.c
2021/12/: Makefile  ppathing.c
2021/13/: Makefile  torigami.c
2021/14/: Makefile  polyList.c  polyList.h  xpoly.c
2021/15/: Makefile  chiton.c
2021/16/: Makefile  pdecoder.c
2021/17/: Makefile  tshot.c
2021/18/: Makefile  sfnum.c  sfnum.h  snailfish.c
2021/19/: Makefile  bscanner.c
2021/2/: Makefile  dive.c
2021/3/: Makefile  binarydiagnostic.c
2021/4/: Makefile  giantsquid.c
2021/5/: htventure.c
2021/6/: lanternfish.c
2021/7/: Makefile
2022/01/: starfruit.py
2022/02/: rockpaperscissors.py
2022/03/: rucksack.py
2022/04/: cleanup.py
2022/05/: CM9000.py  CM9001.py
2022/06/: tuning.py  tuning_golfed.py
2022/07/: dirclear.py
2022/08/: treetop.py
2022/09/: ropebridge.py
2022/10/: crt.py
2022/11/: monkey_business.py
2022/12/: hill_climbing_algorithm.py
2022/13/: distress_signal.py
2022/14/: regolith_reservoir.py
2022/15/: beacon_exclusion_zone.py
2022/16/: volcano_valves.py
2023/: .gitignore
2023/01/: Trebuchet.java
2023/02/: CubeConundrum.java
2023/03/: GearRatios.java
2023/04/: Scratchcards.java
2023/05/: Fertilizer.java
2023/06/: WaitForIt.java
2023/07/: CamelCards.java  (+1 more)
2024/: Cargo.toml
2024/01/: historian-hysteria.rs
2024/02/: red-nosed_reports.rs
2024/03/: mull_it_over.rs
2024/04/: ceres_search.rs
2024/05/: print_queue.rs
2024/06/: guard_gallivant.rs
2024/07/: bridge_repair.rs
2024/08/: resonant_collinearity.rs
2024/09/: disk_fragmenter.rs
2024/10/: hoof_it.rs
2024/11/: plutonian_pebbles.rs
2024/12/: garden_groups.rs
2024/13/: claw_contraption.rs
2024/14/: halves_finder.rs  overlap_finder.rs  restroom_redoubt.rs  symm_finder.rs
2024/15/: big_warehouse_woes.rs  warehouse_woes.rs
2024/16/: reindeer_maze.rs
2024/17/: chronospatial_computer.rs  codegen.rs  interpreter.rs  part_2.md  vm.rs
2024/18/: ram_run.rs
2024/19/: linen_layout.rs
2024/20/: race_condition.rs
2024/21/: keypad_conundrum.rs
2024/22/: monkey_market.rs
(+13 files in other folders)
