[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "01"
path = "01/historian-hysteria.rs"

[[bin]]
name = "02"
path = "02/red-nosed_reports.rs"

[[bin]]
name = "03"
path = "03/mull_it_over.rs"

[[bin]]
name = "04"
path = "04/ceres_search.rs"

[[bin]]
name = "05"
path = "05/print_queue.rs"

[[bin]]
name = "06"
path = "06/guard_gallivant.rs"
