[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "01"
path = "01/historian-hysteria.rs"

[[bin]]
name = "02"
path = "02/red-nosed_reports.rs"

[[bin]]
name = "03"
path = "03/mull_it_over.rs"

[[bin]]
name = "04"
path = "04/ceres_search.rs"

[[bin]]
name = "05"
path = "05/print_queue.rs"

[[bin]]
name = "06"
path = "06/guard_gallivant.rs"

[[bin]]
name = "07"
path = "07/bridge_repair.rs"

[[bin]]
name = "08"
path = "08/resonant_collinearity.rs"

[[bin]]
name = "09"
path = "09/disk_fragmenter.rs"

[[bin]]
name = "10"
path = "10/hoof_it.rs"

[[bin]]
name = "11"
path = "11/plutonian_pebbles.rs"

[[bin]]
name = "12"
path = "12/garden_groups.rs"
