[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
pathfinding = "4.12.0"
regex = "1.11.1"

[[bin]]
name = "01"
path = "01/historian-hysteria.rs"

[[bin]]
name = "02"
path = "02/red-nosed_reports.rs"

[[bin]]
name = "03"
path = "03/mull_it_over.rs"

[[bin]]
name = "04"
path = "04/ceres_search.rs"

[[bin]]
name = "05"
path = "05/print_queue.rs"

[[bin]]
name = "06"
path = "06/guard_gallivant.rs"

[[bin]]
name = "07"
path = "07/bridge_repair.rs"

[[bin]]
name = "08"
path = "08/resonant_collinearity.rs"

[[bin]]
name = "09"
path = "09/disk_fragmenter.rs"

[[bin]]
name = "10"
path = "10/hoof_it.rs"

[[bin]]
name = "11"
path = "11/plutonian_pebbles.rs"

[[bin]]
name = "12"
path = "12/garden_groups.rs"

[[bin]]
name = "13"
path = "13/claw_contraption.rs"


[[bin]]
name = "14pt1"
path = "14/restroom_redoubt.rs"

[[bin]]
name = "14pt2"
path = "14/overlap_finder.rs"

[[bin]]
name = "15pt1"
path = "15/warehouse_woes.rs"

[[bin]]
name = "15pt2"
path = "15/big_warehouse_woes.rs"

[[bin]]
name = "16"
path = "16/reindeer_maze.rs"

[[bin]]
name = "17"
path = "17/chronospatial_computer.rs"

[[bin]]
name = "18"
path = "18/ram_run.rs"

[[bin]]
name = "20"
path = "20/race_condition.rs"